fixed horizontal scrolling
and changed button to cursor

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-/* 
-- .settings-label is screwed up
- */
-
 /* -- MAIN STYLES ------------------------------------------------- */
 * {
   box-sizing: border-box;
@@ -171,156 +167,6 @@ p {
   -moz-transform-origin: 50% 4px;
   animation: ring 4s ease-in-out infinite;
   transform-origin: 50% 4px;
-}
-
-@-webkit-keyframes ring {
-  0% {
-    -webkit-transform: rotateZ(0);
-  }
-  1% {
-    -webkit-transform: rotateZ(30deg);
-  }
-  3% {
-    -webkit-transform: rotateZ(-28deg);
-  }
-  5% {
-    -webkit-transform: rotateZ(34deg);
-  }
-  7% {
-    -webkit-transform: rotateZ(-32deg);
-  }
-  9% {
-    -webkit-transform: rotateZ(30deg);
-  }
-  11% {
-    -webkit-transform: rotateZ(-28deg);
-  }
-  13% {
-    -webkit-transform: rotateZ(26deg);
-  }
-  15% {
-    -webkit-transform: rotateZ(-24deg);
-  }
-  17% {
-    -webkit-transform: rotateZ(22deg);
-  }
-  19% {
-    -webkit-transform: rotateZ(-20deg);
-  }
-  21% {
-    -webkit-transform: rotateZ(18deg);
-  }
-  23% {
-    -webkit-transform: rotateZ(-16deg);
-  }
-  25% {
-    -webkit-transform: rotateZ(14deg);
-  }
-  27% {
-    -webkit-transform: rotateZ(-12deg);
-  }
-  29% {
-    -webkit-transform: rotateZ(10deg);
-  }
-  31% {
-    -webkit-transform: rotateZ(-8deg);
-  }
-  33% {
-    -webkit-transform: rotateZ(6deg);
-  }
-  35% {
-    -webkit-transform: rotateZ(-4deg);
-  }
-  37% {
-    -webkit-transform: rotateZ(2deg);
-  }
-  39% {
-    -webkit-transform: rotateZ(-1deg);
-  }
-  41% {
-    -webkit-transform: rotateZ(1deg);
-  }
-  43% {
-    -webkit-transform: rotateZ(0);
-  }
-  100% {
-    -webkit-transform: rotateZ(0);
-  }
-}
-
-@-moz-keyframes ring {
-  0% {
-    -moz-transform: rotate(0);
-  }
-  1% {
-    -moz-transform: rotate(30deg);
-  }
-  3% {
-    -moz-transform: rotate(-28deg);
-  }
-  5% {
-    -moz-transform: rotate(34deg);
-  }
-  7% {
-    -moz-transform: rotate(-32deg);
-  }
-  9% {
-    -moz-transform: rotate(30deg);
-  }
-  11% {
-    -moz-transform: rotate(-28deg);
-  }
-  13% {
-    -moz-transform: rotate(26deg);
-  }
-  15% {
-    -moz-transform: rotate(-24deg);
-  }
-  17% {
-    -moz-transform: rotate(22deg);
-  }
-  19% {
-    -moz-transform: rotate(-20deg);
-  }
-  21% {
-    -moz-transform: rotate(18deg);
-  }
-  23% {
-    -moz-transform: rotate(-16deg);
-  }
-  25% {
-    -moz-transform: rotate(14deg);
-  }
-  27% {
-    -moz-transform: rotate(-12deg);
-  }
-  29% {
-    -moz-transform: rotate(10deg);
-  }
-  31% {
-    -moz-transform: rotate(-8deg);
-  }
-  33% {
-    -moz-transform: rotate(6deg);
-  }
-  35% {
-    -moz-transform: rotate(-4deg);
-  }
-  37% {
-    -moz-transform: rotate(2deg);
-  }
-  39% {
-    -moz-transform: rotate(-1deg);
-  }
-  41% {
-    -moz-transform: rotate(1deg);
-  }
-  43% {
-    -moz-transform: rotate(0);
-  }
-  100% {
-    -moz-transform: rotate(0);
-  }
 }
 
 @keyframes ring {
@@ -570,7 +416,9 @@ button {
   margin: 10px 0;
   font-weight: 100;
   font-size: 15px;
+  cursor: pointer;
 }
+
 #cancel {
   background-color: grey;
 }
@@ -631,7 +479,7 @@ button {
   }
   body {
     display: grid;
-    grid-template-columns: 55px 1fr;
+    grid-template-columns: 55px minmax(0, 1fr);
     height: 100vh;
     grid-template-areas:
       "header header"
@@ -651,8 +499,6 @@ button {
     padding-left: 25px;
   }
   .charts {
-    /* width: 100%;
-    display: flex; */
     display: grid;
     grid-template-columns: 50% 50%;
   }
@@ -735,7 +581,7 @@ button {
   }
   main {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr);
     grid-template-areas:
       "dashboard dashboard"
       "alert alert"
@@ -746,7 +592,7 @@ button {
       "message settings";
   }
   body {
-    grid-template-columns: 60px 1fr;
+    grid-template-columns: 60px minmax(0, 1fr);
   }
   /* STYLING */
   p,
